# spacewar

./: .coverage  .gitignore  CONTEXT.md  LICENSE  README.md  REQUIREMENTS.md  launcher.py  pyproject.toml
.github/workflows/: release.yml
docs/1985manual/: spacewar.doc.txt
docs/1985screenshots/archive_org/: link.txt
docs/1985screenshots/myabandonware/: link.txt
src/spacewar/: __init__.py  __main__.py  attract.py  audio.py  collision.py  constants.py  draw.py  game.py  gravity.py  init.py  joystick.py  keys.py  main.py  phaser.py  physics.py  pictures.py  planet.py  robot.py  ship.py  sound.py  sprites.py  starfield.py  stars.py  torpedo.py  trig.py  ui.py
tests/: conftest.py  test_collision.py  test_constants.py  test_game.py  test_gravity.py  test_phaser.py  test_physics.py  test_planet.py  test_robot.py  test_ship.py  test_stars.py  test_torpedo.py  test_trig.py
