[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spacewar"
version = "0.1.0"
description = "Faithful recreation of Bill Seiler's SpaceWar v1.72 (1985)"
requires-python = ">=3.11"
dependencies = ["pygame>=2.5"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[project.scripts]
spacewar = "spacewar.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
