[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacewar"
version = "1.0.0"
description = "Faithful Python/Pygame recreation of SpaceWar 1985 (DOS/CGA)"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
spacewar = "spacewar.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
